--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "lint-staged": "lint-staged"
   },
   "dependencies": {
+    "axios": "^0.16.1",
     "babel-runtime": "^6.20.0",
     "meteor-node-stubs": "~0.2.4",
     "react": "^15.5.4",
