--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "axios": "^0.16.1",
     "babel-runtime": "^6.20.0",
+    "bcrypt": "^1.0.2",
     "meteor-node-stubs": "~0.2.4",
     "react": "^15.5.4",
     "react-addons-pure-render-mixin": "^15.5.2",
@@ -31,6 +32,7 @@
     "eslint-plugin-meteor": "^4.0.1",
     "eslint-plugin-react": "^7.0.1",
     "lint-staged": "^3.6.0",
-    "pre-commit": "^1.2.2"
+    "pre-commit": "^1.2.2",
+    "react-swipe": "^5.0.8"
   }
 }
