--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-addons-pure-render-mixin": "^15.5.2",
     "react-dom": "^15.5.4",
     "react-router": "^4.1.1",
-    "react-router-dom": "^4.1.1"
+    "react-router-dom": "^4.1.1",
+    "react-swipe": "^5.0.8"
   },
   "lint-staged": {
     "*.js": [
